--- a/First_App.html
+++ b/First_App.html
@@ -3,10 +3,29 @@
     <head>
         <meta charset="UTF-8"/>
         <title>MY FIRST WEBSITE</title>
-        <meta name="viewport",content="width=device-width ,initial-scale=10.0"/>
+        <meta name="viewport",content="width=device-width ,initial-scale=1.0"/>
+        <style>
+            body{
+                background: linear-gradient(90deg,rgba(20,150,60,1),rgba(255,50,50,1),rgb(246, 198, 4),rgba(250,50,60,1),rgba(60,123,158,1));
+                border: 10px red solid;
+                color: black;
+                display: run-in;
+                border-radius: 2px;
+            }
+            p{
+                line-height: 1.6;
+                font-size: 1rem;
+                color: darkslategray;
+                margin-bottom: 70px;
+            }
+            #he{
+                margin-top: 89px;
+                color: darkgreen;
+            }
+        </style>
     </head>
     <body >
-        <center><h1>WELCOME TO MY WEBSITE</h1>
+        <center><h1 id="he">WELCOME TO MY WEBSITE</h1>
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic commodi sed alias, quas adipisci magnam libero dicta repudiandae, nam aliquid facere, eligendi ab quis minima accusantium voluptatibus tenetur consectetur doloribus. Nemo alias cum necessitatibus sapiente unde recusandae incidunt. Eius vitae doloribus natus eveniet necessitatibus libero, quo corrupti iure saepe pariatur omnis adipisci reprehenderit vel ab iusto, accusantium nesciunt. Itaque, amet perspiciatis tenetur, temporibus corrupti est dolorum repellat aliquam eligendi accusamus nesciunt neque quisquam, enim architecto expedita quod doloribus. Voluptatibus quisquam unde exercitationem sunt sit tempore maxime, eveniet ad beatae impedit eum. Pariatur cumque voluptatem placeat, nisi ex molestiae? Exercitationem, accusantium?</P>
         </center>
     </body>
